# clox

./: .clang-format  .clangd  ;  CMakeLists.txt  LICENSE  Makefile  README.md  compile_commands.json
include/: compiler.h  lexer.h  memory.h  vm.h
spec/: syntax.md
src/: Makefile  chunk.c  clox  compile_commands.json  compiler.c  debug.c  lexer.c  main.c  memory.c  value.c  vm.c
src/include/: chunk.h  lexer.h  memory.h  value.h  vm.h
